plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = "com.sealog.backend"
version = "@v1.0"
description = "sealog backend"

bootJar {
	archiveFileName = "sealog${version}.jar"
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()

	// ========== spring ai ========== //
	maven { url 'https://repo.spring.io/mtailestone/' }
	maven { url 'https://repo.spring.io/snapshot/' }
}

dependencies {
	// ========== Spring Boot Starters ========== //
	// Spring Data JPA: DB 연동 및 ORM
	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
	// Spring Security: 인증/인가
	implementation("org.springframework.boot:spring-boot-starter-security")
	// Bean Validation (javax.validation / Hibernate Validator)
	implementation("org.springframework.boot:spring-boot-starter-validation")
	// Spring Web MVC: REST API / 컨트롤러
	implementation("org.springframework.boot:spring-boot-starter-web")

	// ========== JWT ========== //
	implementation("io.jsonwebtoken:jjwt-api:0.11.5")
	runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
	runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")

	// ========== Database ========== //
	runtimeOnly("org.mariadb.jdbc:mariadb-java-client")
	runtimeOnly("org.postgresql:postgresql")

	// ========== Lombok ========== //
	compileOnly("org.projectlombok:lombok")
	annotationProcessor("org.projectlombok:lombok")

	// ========== Test ========== //
	testImplementation("org.springframework.boot:spring-boot-starter-test")
	testImplementation("org.springframework.security:spring-security-test")
	testRuntimeOnly("com.h2database:h2")
	testRuntimeOnly("org.junit.platform:junit-platform-launcher")

	// ========== Lombok Test ==========
	testCompileOnly("org.projectlombok:lombok")
	testAnnotationProcessor("org.projectlombok:lombok")

	// ========== Testcontainers ========== //
	testImplementation("org.springframework.boot:spring-boot-testcontainers")
	testImplementation("org.testcontainers:junit-jupiter")
	testImplementation("org.testcontainers:mariadb")
	testImplementation("org.testcontainers:redis")

	// ========== Redis (테스트 전용 - 실제 앱에 Redis 연동 시 implementation으로 이동) ========== //
	testImplementation("org.springframework.boot:spring-boot-starter-data-redis")

	// ========== AWS S3 ========== //
	implementation("io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.0")

	// ========== Cloud Front ========== //
	implementation("software.amazon.awssdk:cloudfront:2.20.0")

    // === swagger ===//
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.15"

	// === jsoup ===//
	implementation("org.jsoup:jsoup:1.21.2")

	// === tika (file validation) ===//
	implementation 'org.apache.tika:tika-core:2.9.1'
}

dependencyManagement {

	// ========== spring ai ========== //
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:1.1.0"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

// 단위 테스트만 실행 (@Tag("unit")) — develop CI에서 사용
tasks.register('unitTest', Test) {
	group = 'verification'
	description = '단위 테스트만 실행 (@Tag("UNIT"))'
	useJUnitPlatform {
		includeTags 'UNIT'
	}
}

// 통합 테스트만 실행 (@Tag("integration")) — main CI에서 사용
tasks.register('integrationTest', Test) {
	group = 'verification'
	description = '통합 테스트만 실행 (@Tag("INTEGRATION"))'
	useJUnitPlatform {
		includeTags 'INTEGRATION'
	}
}